Railway deployment config

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # Environment variables for Cat Tracker application
 
-# API Configuration
-VITE_API_BASE_URL=http://localhost:3001/api
+# API Configuration (Update this with your Railway backend URL)
+VITE_API_BASE_URL=https://YOUR-BACKEND-APP.railway.app/api
 
 # Map Configuration (for future map integration)
 VITE_MAPBOX_ACCESS_TOKEN=your_mapbox_token_here
