--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,17 @@
-NODE_ENV=development
+# For Railway Deployment
+NODE_ENV=production
 PORT=3001
-DB_HOST=localhost
+
+# Railway provides DATABASE_URL automatically when you add Postgres
+# DATABASE_URL will be in format: postgresql://user:password@host:port/database
+DATABASE_URL=
+
+# Or use individual variables (Railway Postgres internal connection)
+DB_HOST=
 DB_PORT=5432
-DB_NAME=cat_tracker
-DB_USER=catuser
-DB_PASSWORD=catpass123
+DB_NAME=railway
+DB_USER=postgres
+DB_PASSWORD=
+
+# Add your frontend URL for CORS
+FRONTEND_URL=https://YOUR-FRONTEND-APP.railway.app
