--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@hookform/resolvers": "^5.2.1",
+    "@tanstack/react-query": "^5.87.4",
     "@types/react-router-dom": "^5.3.3",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.12",
