--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,5 +1,5 @@
 [phases.setup]
-nixPkgs = ["nodejs-20_x"]
+nixPkgs = ["nodejs"]
 
 [phases.install]
 cmds = ["npm install"]
@@ -9,3 +9,6 @@ cmds = ["npm run build"]
 
 [start]
 cmd = "npm run preview"
+
+[variables]
+NODE_VERSION = "20"
