--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,9 @@
     "db:fix": "tsx src/db/migrate-fix.ts"
   },
   "dependencies": {
+    "@types/compression": "^1.8.1",
     "@types/sqlite3": "^3.1.11",
+    "compression": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
